style(container.less): add z-index to #main and #toolbar, #sidebar to fix overlapping issue style(container.less): remove z-index from .has--size--full and .full-width to fix overlapping issue

--- a/theme/themes/mirage/elements/container.less
+++ b/theme/themes/mirage/elements/container.less
@@ -325,8 +325,7 @@ body:not(.section-add):not(.section-edit) {
         Edit / Add section
 *******************************/
 
-.section-add,
-.section-edit {
+@{edit} {
   #page-edit > .ui.container > .blocks-form > fieldset > [data-rbd-droppable-id] > [class*="block-editor"] {
     @media @mobile {
       --edit-gutter: calc(@editMinimumGutter - @mobileMinimumGutter);
@@ -363,6 +362,12 @@ body:not(.section-add):not(.section-edit) {
   
   #main {
     width: calc(100% - @toolbarWidthCSS - @sidebarWidthCSS);
+    z-index: 1;
+  }
+
+  #toolbar,
+  #sidebar {
+    z-index: 0;
   }
 
   [class*="block-editor"] {
@@ -374,9 +379,16 @@ body:not(.section-add):not(.section-edit) {
     margin-bottom: 0;
   }
 
+  #page-edit > .ui.container > .blocks-form > fieldset > [data-rbd-droppable-id] > [class*="block-editor"].has--size--full,
+  #page-edit > .ui.container > .blocks-form > fieldset > [data-rbd-droppable-id] > [class*="block-editor"].full-width,
   .has--size--full,
   .full-width {
     .full-width-edit();
+  }
+
+  #page-edit > .ui.container > .blocks-form > fieldset > [data-rbd-droppable-id] > [class*="block-editor"].has--size--full,
+  #page-edit > .ui.container > .blocks-form > fieldset > [data-rbd-droppable-id] > [class*="block-editor"].full-width {
+    z-index: unset !important;
   }
 
   .drag.handle.wrapper {
